[f] Fix for links on methodology page, more spacing in header, images as link

--- a/common/static/sass/landing_page/style.sass
+++ b/common/static/sass/landing_page/style.sass
@@ -34,7 +34,7 @@
     line-height: 22px !important
 
   .welcome
-    height: 243px
+    height: 343px
     background: #fff
 
   .page-banner
@@ -43,6 +43,7 @@
     font-size: 17px
     line-height: 22px
     letter-spacing: -0.3px
+    padding-top: 3em
 
   nav.landing-nav
     background-color: #fff
